# FinetuningSLM_SearchQueries

./: .gitignore  01_finetune_ner.py  README.md  pyproject.toml
2/: .gitignore  01_finetune_ner.py  02_finetune_ner_with_lookup_postprocess.py  build_splits.py  entity_lookup_pipeline.py
2/Augmented/: augmentedQ.jsonl  jiotv_augmented_3000_annotated.xlsx
2/files/: query_annotated.xlsx
2/nb/: 01_finetune_ner.ipynb  02_finetune_ner_with_lookup_postprocess.ipynb
data/: annotations.jsonl
data/splits/: test.jsonl  train.jsonl  val.jsonl
