[project]
name = "2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "datasets>=3.0.0",
    "ipykernel>=7.0.0",
    "numpy>=2.0.0",
    "peft>=0.14.0",
    "protobuf>=5.0.0",
    "scikit-learn>=1.5.0",
    "sentencepiece>=0.2.0",
    "torch>=2.12.0",
    "transformers>=4.51.0",
    "trl>=0.15.0",
]

# bitsandbytes is CUDA-only; omit on macOS. Install manually on Linux+GPU:
#   uv pip install bitsandbytes>=0.45.0
